# mood-based-music-recommender

./: .coverage  .coveragerc  .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .pylintrc  .runner_system_id  .semgrep.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FEATURES.md  IMPLEMENTATION.md  INDEX.md  QUICKSTART.md  README.md  SECURITY.md  START_HERE.md  SUMMARY.md  USER_MANUAL.md  VERIFICATION.md  cliff.toml  config.toml  coverage.xml  memory.json  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  test_ollama.py
.specify/: README.md  template.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: __init__.py  agent.py  app.py  main.py  memory.json  memory.py  requirements.txt  tools.py
backend/static/: script.js
backend/templates/: index.html
builds/WrprKH-RB/0/Spurthi_10/mood-based-music-recommender.tmp/git-template/: config
frontend/: index.html  script.js  style.css  test_ollama.py
frontend/translations/: en.json  hi.json  te.json
mood_recommender/: agent.py  main.py  memory.py  requirements.txt  tools.py
scripts/: check.ps1
specs/: recommendation_feature_spec.md
specs/recommendation_feature/: plan.md  spec.md  tasks.md
tests/: test_app.py  test_coverage_boost.py  test_final_coverage_push.py  test_memory_tools.py
