[project]
name = "mood-based-music-recommender"
version = "1.0.0"
description = "A Flask backend and HTML/CSS/JS frontend for mood-based music recommendations."
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
  "pylint==3.3.3",
  "flake8==7.1.1",
  "semgrep==1.101.0",
  "pyupgrade==3.19.1",
  "pip-audit==2.7.3",
  "pytest==8.4.0",
  "pytest-cov==7.1.0"
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend"]
exclude = [
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  ".venv",
  "venv",
  "build",
  "dist",
  "node_modules",
]

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "N", "SIM", "UP", "W"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# IMPORTANT FIX FOR CI CONSISTENCY
[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.12"
files = ["backend"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true

[tool.vulture]
paths = ["backend"]
min_confidence = 80
sort_by_size = true
exclude = ["venv", ".venv", "build", "dist", "node_modules"]

[tool.bandit]
targets = ["backend"]
exclude_dirs = ["venv", ".venv", "build", "dist", "node_modules"]
skips = []

[tool.pylint.main]
py-version = "3.12"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "venv",
  "build",
  "dist",
  "node_modules",
]

[tool.pyupgrade]
keep-runtime-typing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=backend --cov-report=term-missing --cov-report=xml:coverage.xml --cov-fail-under=80"